objects/CEC_Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CEC_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CEC</label>
        <referenceTo>CEC__c</referenceTo>
        <relationshipName>CEC_Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <formula>IF(ISPICKVAL(Attendee__r.Function__c,&quot;Information Technology&quot;),&quot;Information Technology&quot;,
IF(ISPICKVAL(Attendee__r.Function__c,&quot;Customer Service&quot;),&quot;Customer Service&quot;,
IF(ISPICKVAL(Attendee__r.Function__c,&quot;Operations / Process Management&quot;),&quot;Operations / Process Management&quot;,
IF(ISPICKVAL(Attendee__r.Function__c,&quot;Marketing&quot;),&quot;Marketing&quot;,
IF(ISPICKVAL(Attendee__r.Function__c,&quot;Contact Center Management&quot;),&quot;Contact Center Management&quot;,
IF(ISPICKVAL(Attendee__r.Function__c,&quot;Sales&quot;),&quot;Sales&quot;,
IF(ISPICKVAL(Attendee__r.Function__c,&quot;Finance&quot;),&quot;Finance&quot;,
IF(ISPICKVAL(Attendee__r.Function__c,&quot;Human Resources&quot;),&quot;Human Resources&quot;,
IF(ISPICKVAL(Attendee__r.Function__c,&quot;Purchasing&quot;),&quot;Purchasing&quot;,
IF(ISPICKVAL(Attendee__r.Function__c,&quot;Production Management&quot;),&quot;Production Management&quot;,&quot;Other&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>IF(ISNULL(Attendee__r.ContactPhone__c), Attendee__r.ContactMobile__c , Attendee__r.ContactPhone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Attendee__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <formula>Attendee__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <label>CXC Attendee</label>
    <nameField>
        <displayFormat>CECA{0000}</displayFormat>
        <label>CEC Attendee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CXC Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>